--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,4 @@
 metadata:
   creationTimestamp: null
 spec:
-  destination:
-    apiServerUrl: ""
-    namespace: ""
-  image: latest
+  image: test
